[tool.poetry]
name = "prf-geographic-heatmap"
version = "1.0.0"
description = "Mapa de calor interativo baseado em dados abertos da PRF sobre acidentes."
authors = ["pab-h <dev.pab.2020@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
folium = "^0.19.2"
pandas = "^2.2.3"
streamlit = "^1.41.1"
streamlit-folium = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
